# gatewai-rag

./: .dockerignore  Dockerfile  README.md  pyproject.toml
app/: main.py  models.py  schemas.py
app/models/: database.py  source.py
app/schemas/: health_response.py  request.py  response.py
k8s/: deployment.yaml  service.yaml
