[project]
name = "gatewai-rag"
version = "0.1.0"
description = "Production-oriented RAG pipeline for Gatewai document ingestion, chunking, Redis-backed vector retrieval, and LLM synthesis via LlamaIndex. Built as the retrieval layer for a multi-provider LLM gateway."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.2",
    "llama-index>=0.14.23",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
]
